--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ numpy==1.26.3
 packaging==23.2
 pandas==2.2.0
 pluggy==1.4.0
+praw==7.7.1
+prawcore==2.4.0
 PyMySQL==1.1.0
 pytest==8.0.0
 python-dateutil==2.8.2
@@ -17,4 +19,6 @@ requests==2.31.0
 s3transfer==0.10.0
 six==1.16.0
 tzdata==2023.4
+update-checker==0.18.0
 urllib3==2.0.7
+websocket-client==1.7.0
