--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,8 @@
 		"vscode": {
 			"extensions": [
 				"ms-python.pylint",
-				"ms-azuretools.vscode-docker"
+				"ms-azuretools.vscode-docker",
+				"mhutchie.git-graph"
 			]
 		}
 	}
