--- a/requirements.txt
+++ b/requirements.txt
@@ -2,16 +2,23 @@ boto3==1.34.34
 botocore==1.34.34
 certifi==2023.11.17
 charset-normalizer==3.3.2
+contourpy==1.2.0
+cycler==0.12.1
+fonttools==4.48.1
 idna==3.6
 iniconfig==2.0.0
 jmespath==1.0.1
+kiwisolver==1.4.5
+matplotlib==3.8.2
 numpy==1.26.3
 packaging==23.2
 pandas==2.2.0
+pillow==10.2.0
 pluggy==1.4.0
 praw==7.7.1
 prawcore==2.4.0
 PyMySQL==1.1.0
+pyparsing==3.1.1
 pytest==8.0.0
 python-dateutil==2.8.2
 pytz==2024.1
