Changed to a jupyter notebook, added jupyter environment to devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,7 +13,8 @@
 			"extensions": [
 				"ms-python.pylint",
 				"ms-azuretools.vscode-docker",
-				"mhutchie.git-graph"
+				"mhutchie.git-graph",
+				"ms-toolsai.jupyter"
 			]
 		}
 	}
