--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ boto3==1.34.34
 botocore==1.34.34
 certifi==2023.11.17
 charset-normalizer==3.3.2
+gitdb==4.0.11
+GitPython==3.1.41
 idna==3.6
 iniconfig==2.0.0
 jmespath==1.0.1
@@ -11,7 +13,6 @@ pandas==2.2.0
 pluggy==1.4.0
 praw==7.7.1
 prawcore==2.4.0
-ef0cdc119a4a4b9f9ac061e50bc1d9b18f0a0
 PyMySQL==1.1.0
 pytest==8.0.0
 python-dateutil==2.8.2
@@ -19,6 +20,7 @@ pytz==2024.1
 requests==2.31.0
 s3transfer==0.10.0
 six==1.16.0
+smmap==5.0.1
 tzdata==2023.4
 update-checker==0.18.0
 urllib3==2.0.7
