--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
+beautifulsoup4==4.12.3
 boto3==1.34.34
 botocore==1.34.34
+bs4==0.0.2
 certifi==2023.11.17
 charset-normalizer==3.3.2
+gitdb==4.0.11
+GitPython==3.1.41
 idna==3.6
 iniconfig==2.0.0
 jmespath==1.0.1
@@ -18,6 +22,8 @@ pytz==2024.1
 requests==2.31.0
 s3transfer==0.10.0
 six==1.16.0
+smmap==5.0.1
+soupsieve==2.5
 tzdata==2023.4
 update-checker==0.18.0
 urllib3==2.0.7
