--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 */__pycache__
 wallstreetbets-posts-and-comments-for-august-2021-comments.csv
 alphavantage_data_GME_2021-08.csv
+wallstreetbets-posts-and-comments-for-august-2021-comments 1.csv
