--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+about-time==4.2.1
+alive-progress==3.1.5
 asttokens==2.4.1
 boto3==1.34.34
 botocore==1.34.34
@@ -10,6 +12,9 @@ debugpy==1.8.1
 decorator==5.1.1
 executing==2.0.1
 fonttools==4.48.1
+gitdb==4.0.11
+GitPython==3.1.41
+grapheme==0.6.0
 idna==3.6
 iniconfig==2.0.0
 ipykernel==6.29.2
@@ -46,6 +51,7 @@ pyzmq==25.1.2
 requests==2.31.0
 s3transfer==0.10.0
 six==1.16.0
+smmap==5.0.1
 stack-data==0.6.3
 tornado==6.4
 traitlets==5.14.1
