--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@
 wallstreetbets-posts-and-comments-for-august-2021-comments.csv
 alphavantage_data_GME_2021-08.csv
 wallstreetbets-posts-and-comments-for-august-2021-comments 1.csv
-correlation.png
+correlation*.png
