--- a/requirements.txt
+++ b/requirements.txt
@@ -18,11 +18,15 @@ grapheme==0.6.0
 idna==3.6
 iniconfig==2.0.0
 ipykernel==6.29.2
+ipympl==0.9.3
 ipython==8.21.0
+ipython-genutils==0.2.0
+ipywidgets==8.1.2
 jedi==0.19.1
 jmespath==1.0.1
 jupyter_client==8.6.0
 jupyter_core==5.7.1
+jupyterlab_widgets==3.0.10
 kiwisolver==1.4.5
 matplotlib==3.8.2
 matplotlib-inline==0.1.6
@@ -60,3 +64,4 @@ update-checker==0.18.0
 urllib3==2.0.7
 wcwidth==0.2.13
 websocket-client==1.7.0
+widgetsnbextension==4.0.10
