--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 about-time==4.2.1
-alive-progress==3.1.5
 asttokens==2.4.1
 boto3==1.34.34
 botocore==1.34.34
@@ -18,15 +17,11 @@ grapheme==0.6.0
 idna==3.6
 iniconfig==2.0.0
 ipykernel==6.29.2
-ipympl==0.9.3
 ipython==8.21.0
-ipython-genutils==0.2.0
-ipywidgets==8.1.2
 jedi==0.19.1
 jmespath==1.0.1
 jupyter_client==8.6.0
 jupyter_core==5.7.1
-jupyterlab_widgets==3.0.10
 kiwisolver==1.4.5
 matplotlib==3.8.2
 matplotlib-inline==0.1.6
@@ -58,10 +53,10 @@ six==1.16.0
 smmap==5.0.1
 stack-data==0.6.3
 tornado==6.4
+tqdm==4.66.2
 traitlets==5.14.1
 tzdata==2023.4
 update-checker==0.18.0
 urllib3==2.0.7
 wcwidth==0.2.13
 websocket-client==1.7.0
-widgetsnbextension==4.0.10
