--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
+beautifulsoup4==4.12.3
 about-time==4.2.1
 asttokens==2.4.1
 boto3==1.34.34
 botocore==1.34.34
+bs4==0.0.2
 certifi==2023.11.17
 charset-normalizer==3.3.2
+gitdb==4.0.11
+GitPython==3.1.41
 comm==0.2.1
 contourpy==1.2.0
 cycler==0.12.1
@@ -51,6 +55,7 @@ requests==2.31.0
 s3transfer==0.10.0
 six==1.16.0
 smmap==5.0.1
+soupsieve==2.5
 stack-data==0.6.3
 tornado==6.4
 tqdm==4.66.2
