--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ alphavantage_data_GME_2021-08.csv
 wallstreetbets-posts-and-comments-for-august-2021-comments 1.csv
 correlation*.png
 Large Calculation.png
+output.png
