--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,44 @@
 about-time==4.2.1
 asttokens==2.4.1
 beautifulsoup4==4.12.3
+blinker==1.7.0
 boto3==1.34.34
 botocore==1.34.34
 bs4==0.0.2
 certifi==2023.11.17
 charset-normalizer==3.3.2
+click==8.1.7
 comm==0.2.1
 contourpy==1.2.0
 cycler==0.12.1
+dash==2.15.0
+dash-bootstrap-components==0.13.1
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
 debugpy==1.8.1
 decorator==5.1.1
 executing==2.0.1
+Flask==3.0.2
 fonttools==4.48.1
 gitdb==4.0.11
-gitdb==4.0.11
-GitPython==3.1.41
 GitPython==3.1.41
 grapheme==0.6.0
 idna==3.6
+importlib-metadata==7.0.1
 iniconfig==2.0.0
 ipykernel==6.29.2
 ipython==8.21.0
+itsdangerous==2.1.2
 jedi==0.19.1
+Jinja2==3.1.3
 jmespath==1.0.1
 jupyter_client==8.6.0
 jupyter_core==5.7.1
 kiwisolver==1.4.5
-matplotlib-inline==0.1.6
+MarkupSafe==2.1.5
 matplotlib==3.8.2
+matplotlib-inline==0.1.6
 nest-asyncio==1.6.0
 numpy==1.26.3
 packaging==23.2
@@ -37,6 +47,7 @@ parso==0.8.3
 pexpect==4.9.0
 pillow==10.2.0
 platformdirs==4.2.0
+plotly==5.19.0
 pluggy==1.4.0
 praw==7.7.1
 prawcore==2.4.0
@@ -52,16 +63,21 @@ python-dateutil==2.8.2
 pytz==2024.1
 pyzmq==25.1.2
 requests==2.31.0
+retrying==1.3.4
 s3transfer==0.10.0
 six==1.16.0
 smmap==5.0.1
 soupsieve==2.5
 stack-data==0.6.3
+tenacity==8.2.3
 tornado==6.4
 tqdm==4.66.2
 traitlets==5.14.1
+typing_extensions==4.10.0
 tzdata==2023.4
 update-checker==0.18.0
 urllib3==2.0.7
 wcwidth==0.2.13
 websocket-client==1.7.0
+Werkzeug==3.0.1
+zipp==3.17.0
