Bring Meeting Graphs into Main (#28)
* db_stock refactor:
Encapsulated cursor stuff into read_data() and upload_data().
Documented tests for these functions in tests.md

* data.get_sns_data() implemented. db_stock.read_sns() was specced and implemented, and a manual integration test was documented,

* comment_tickers(), stock_tickers() and social_media_sites() implemented + tested

* Initial

* added plot two series

* rest

* Variance timeseries

* Fixes

* stock_variance() copied over

* Parkinson variance added

* test

* plotSeries fix

* Hannah graphs

* Autocorrelation done

* fixed timestamp index

* fixed chat volume

* trying out sentiment mapper

* created new function to include sns data transform

* Commited test code in analysis.py - can be deleted

* Graphs

* Meeting graphs

---------

Co-authored-by: ab2886 <ab2886>
Co-authored-by: han-a <hak37@cam.ac.uk>
Co-authored-by: Dmytro Mai <dm933@cam.ac.uk>
Co-authored-by: Hannah McLoone <hm708@cam.ac.uk>
Co-authored-by: thejadeassassin <ironmanmark3072004@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,5 @@ wallstreetbets-posts-and-comments-for-august-2021-comments 1.csv
 correlation*.png
 Large Calculation.png
 output.png
+database/harry.ipynb
 images/*.png
