--- a/requirements.txt
+++ b/requirements.txt
@@ -44,6 +44,7 @@ numpy==1.26.3
 packaging==23.2
 pandas==2.2.0
 parso==0.8.3
+patsy==0.5.6
 pexpect==4.9.0
 pillow==10.2.0
 platformdirs==4.2.0
@@ -65,10 +66,12 @@ pyzmq==25.1.2
 requests==2.31.0
 retrying==1.3.4
 s3transfer==0.10.0
+scipy==1.12.0
 six==1.16.0
 smmap==5.0.1
 soupsieve==2.5
 stack-data==0.6.3
+statsmodels==0.14.1
 tenacity==8.2.3
 tornado==6.4
 tqdm==4.66.2
